--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
+    "recharts": "^3.7.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.9"
   },
